fixed overflow scroll bug

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -118,6 +118,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media (min-width: 768px) { 
+  .header-container, .mock-bar {
+    margin-right: 0;
+    margin-left: 0;
+    padding-right: 0;
+    padding-left: 0;
+  }
+
   .header {
     text-align:center;
   }
